infra/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: travelnote-virtualservice
  namespace: travelnote
spec:
  hosts:
  - "*"
  gateways:
  - travelnote-gateway
  http:
  - name: "member-route"
    match:
    - uri:
        prefix: /api/member  # ✅ 실제 요청 경로인 /api/member 와 일치시킴
    rewrite:
      uri: "/members"
    route:
    - destination:
        host: member-service
        port:
          number: 8081
  - name: "trip-route"
    match:
    - uri:
        prefix: /api/trip      # ✅ 실제 요청 경로인 /api/trip 와 일치시킴
    rewrite:
      uri: "/trips"
    route:
    - destination:
        host: trip-service
        subset: v1      # 1단계에서 정의한 v1
      weight: 90        # 90%의 트래픽
    - destination:
        host: trip-service
        subset: v2      # 1단계에서 정의한 v2
      weight: 10        # 10%의 트래픽
  - name: "traveler-route"
    match:
    - uri:
        prefix: /api/traveler  # ✅ 실제 요청 경로인 /api/traveler 와 일치시킴
    rewrite:
      uri: "/travelers"
    route:
    - destination:
        host: traveler-service
        port:
          number: 8083
  - name: "payment-route"
    match:
    - uri:
        prefix: /api/payment   # ✅ 실제 요청 경로인 /api/payment 와 일치시킴
    rewrite:
      uri: "/payments"
    route:
    - destination:
        host: payment-service
        port:
          number: 8084
  - name: "frontend-route"
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service # 위에서 만든 프론트엔드 서비스
        port:
          number: 80
